Carousel is now draggable by mouse

--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -18,3 +18,9 @@
     background-color: var(--clr-btn-primary);
     color: white;    
 }
+
+.anker-primary {
+    background-color: var(--clr-btn-primary);
+    text-decoration: none;
+    color: white;
+}
