--- a/src/css/comment-card.css
+++ b/src/css/comment-card.css
@@ -8,6 +8,18 @@
     padding: 1rem 3rem 1rem 1.3rem; 
     border-radius: 0.6rem;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+
+    width: fit-content;
+    height: fit-content;
+
+    inset: 0;
+    transition: all 150ms;
+    margin: auto;
+
 }
 
 .card-comment .author-avatar {
@@ -19,6 +31,7 @@
 
 .card-comment .author-avatar img {
     height: 100%;
+    pointer-events: none;
 }
 
 .card-comment.author-comment {
