--- a/src/css/modules/hero.css
+++ b/src/css/modules/hero.css
@@ -1,4 +1,5 @@
 #hero {
+    position: relative;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -13,9 +14,12 @@
     justify-content: center;
     gap: 2rem;
     padding: 1rem;
+    z-index: 1;
 }
 
 #hero section h1 {
+    position: relative;
+    z-index: 2;
     font-size: clamp(2rem, 4.5vw, 4rem);
     line-height: 1.5;
     text-align: center;
@@ -25,4 +29,26 @@
 
 .yellow {
     color: var(--yellow);
+}
+
+#heroCanvas {
+    background-color: var(--sky-blue);
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#comment-card-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 1;
+}
+
+.card-comment {
+    opacity: 0;
+    z-index: 5;
 }
