--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,7 +1,23 @@
 
 .section-about {
     display: flex;
-    align-items: center;
-    gap: 5rem;
+    flex-direction: column;
+    gap: 10rem;
     padding-block: 10rem;
+
+    p {
+        max-width: 50ch;
+    }
+
+    section:first-of-type {
+        display: flex;
+        justify-content: center;
+        gap: 2rem;
+    }
+
+    section:nth-of-type(2) {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+    }
 }
